@@ -478,6 +478,20 @@ net     all  DROP   info</programlisting>then the chain name is 'net2all'
       </varlistentry>
 
       <varlistentry>
+        <term><emphasis role="bold">FORWARD_CLEAR_MARK=</emphasis>{<emphasis
+        role="bold">Yes</emphasis>|<emphasis role="bold">No</emphasis>}</term>
+
+        <listitem>
+          <para>Added in Shorewall 4.4.11 Beta 3. Traditionally, Shorewall has
+          cleared the packet mark in the first rule in the mangle FORWARD
+          chain. This behavior is maintained with the default setting of this
+          option (CLEAR_FORWARD_MARK=Yes). If FORWARD_CLEAR_MARK is set to
+          'No', packet marks set in the mangle PREROUTING chain are retained
+          in the FORWARD chains.</para>
+        </listitem>
+      </varlistentry>
+
+      <varlistentry>
         <term><emphasis role="bold">HIGH_ROUTE_MARKS=</emphasis>{<emphasis
         role="bold">Yes</emphasis>|<emphasis role="bold">No</emphasis>}</term>
 
