@@ -18,6 +18,8 @@ Changes in Shorewall 4.4.11
 8)  Make find_hosts_by_option() work correctly where ALL_IP appears in
     hosts file.
 
+9)  Add CLEAR_FORWARD_MARK option.
+
 Changes in Shorewall 4.4.10
 
 1)  Fix regression with scripts.
